--- a/ex015/modelo.html
+++ b/ex015/modelo.html
@@ -33,7 +33,7 @@
 
     </section>
     <footer>
-        <p>&copy; Github: @paulomarsiglia93</p>
+        <p>&copy; Github: @pmarsiglia93</p>
     </footer>
     <script src="script.js"></script>
     
